# starting-ragchatbot-codebase

./: .gitignore  CLAUDE.md  format.sh  frontend-changes.md  lint.sh  pyproject.toml
backend/: ai_generator.py  app.py  rag_system.py  search_tools.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_rag_system.py
frontend/: index.html  script.js  style.css
